--- a/CSS/Master.css
+++ b/CSS/Master.css
@@ -1,6 +1,6 @@
 
 html{
-	background: url(/../Images/background.jpg);
+	background: url(https://unsplash.com/search/photos/bridge?photo=3YfSwCfJ6Do);
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
