--- a/CSS/Master.css
+++ b/CSS/Master.css
@@ -1,6 +1,6 @@
 
 html{
-	background: url(https://unsplash.com/collections/226341/bridges?photo=bpt7mjgrBRQ);
+	background: url(https://unsplash.com/photos/bpt7mjgrBRQ);
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
