--- a/CSS/Master.css
+++ b/CSS/Master.css
@@ -1,6 +1,6 @@
 
 html{
-	background: url(/Images/portrait.jpg);
+	background: url(../Images/portrait.jpg);
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
