--- a/Master.css
+++ b/Master.css
@@ -1,5 +1,5 @@
 html{
-	background: url(/MicahHarrison.github.io/Images/background.jpg);
+	background: url(/Images/background.jpg);
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
