--- a/Style.css
+++ b/Style.css
@@ -100,31 +100,41 @@ html, body{
 	padding-bottom: 2%;
 	z-index: 2;
 	position: relative;
-	font-size: 150%;
+	font-size: 125%;
 
 }
 .pics_parallax1{
 	position: relative;
 	padding-right: 20%;
-	padding-bottom: 2%;
-	padding-top: 2%;
+	padding-bottom: 1%;
+	padding-top: 1%;
 	z-index: 2;
-	height: 275px;
+	height: 225px;
 
 }
 .post2 {
 	max-width: 40%;
 	padding-right: 2.5%;
 	text-align: center;
-	padding-bottom: 2%;
+	padding-bottom: 1%;
 	z-index: 2;
 	position: relative;
 	color: white;
-	font-size: 150%;
+	font-size: 100%;
+}
+.post2list {
+	max-width: 40%;
+	padding-right: 2.5%;
+	text-align: left;
+	padding-bottom: 1%;
+	z-index: 2;
+	position: relative;
+	color: white;
+	font-size: 100%;
 }
 .pics_parallax2{
 	position: relative;
-	padding-left: 20%;
+	padding-left: 15%;
 	padding-bottom: 3%;
 	padding-top: 3%;
 	z-index: 2;
@@ -143,24 +153,30 @@ html, body{
 }
 .pics_parallax3{
 	position: relative;
-	padding-left: 20%;
+	padding-left: 15%;
 	padding-bottom: 3%;
 	padding-top: 3%;
 	z-index: 2;
+	height: 350px;
 
 }
 .post4 {
 	max-width: 40%;
-	padding-right: 2.5%;
-	text-align: center;
+	padding-left: 2.5%;
+	text-align: left;
 	padding-bottom: 2%;
 	z-index: 2;
 	position: relative;
-	color: black;
-	font-weight: 300;
+	font-size: 125%;
+
 }
 .pics_parallax4{
+	position: relative;
+	padding-right: 20%;
+	padding-bottom: 1%;
+	padding-top: 1%;
 	z-index: 2;
+	height: 225px;
 
 }
 .hidden{
