--- a/Main.css
+++ b/Main.css
@@ -42,7 +42,9 @@ body {
   color: #f7fcf3;
   font-family: 'Prompt', sans-serif;
 }
-
+.fadein {
+  background: black; 
+}
 
 .fadein img {
   position: absolute;
@@ -93,11 +95,26 @@ body {
 .nav_links li {
   transition: all 0.5s;
   float: left;
-  padding: 10px;
+  padding: 1%;
   color: black;
   background:rgba(255,255,255,1);
   width: 25%;
   text-align: center;
+}
+
+.links {
+  transition: all 0.5s;
+  display: block;
+  font-weight: 20;
+  color: black;
+  text-decoration: none;
+}
+.nav_links li:hover {
+  transition: all 0.5s;
+  padding: 1.5%;
+  color: black;
+  background:rgba(200,200,200,1);
+  width: 25%;
 }
 .no_links {
   width: 100%;
@@ -115,33 +132,18 @@ body {
 }
 
 .no_links li {
-  color: #f7fcf3;
   width: 5%;
   float: left;
-  padding: 10px;
-  color: black;
+  padding-left: 3%;
+  color: white;
   text-align: center;
 }
 
 .email{
-  color: #f7fcf3;
-  padding: 1px;
+  color: white;
+  padding: 1%;
   font-size: 56%;
   font-family: 'Prompt', sans-serif;
-}
-.links {
-  transition: all 0.5s;
-  display: block;
-  font-weight: 20;
-  color: black;
-  text-decoration: none;
-}
-.nav_links li:hover {
-  transition: all 0.5s;
-  padding: 15px;
-  color: black;
-  background:rgba(200,200,200,1);
-  width: 25%;
 }
 .first-int {
   color: white;
@@ -250,12 +252,6 @@ h5 {
   transition: all 1s;
 }
 
-.port-pic:hover {
-  height: auto;
-  z-index: 999;
-  height: 350px;
-  width: 350px;
-}
 .prof-pic2 {
   float: left;
   position: relative;
@@ -283,19 +279,19 @@ h5 {
   overflow: auto;
 }
 .post2 {
-background: rgba(255,255,255,0.7);
-    color: black;
-    font-family: 'ABeeZee', sans-serif;
-    transition: all 0.5s;
-    margin-left: 23%;
-    margin-right: 5%;
-    margin-top: -15px;
-    padding: 2%;
-    width: 47%;
-    text-decoration: underline;
-    position: absolute;
-    font-size: 150%;
-    overflow: auto;
+  background: rgba(255,255,255,0.7);
+  color: black;
+  font-family: 'ABeeZee', sans-serif;
+  transition: all 0.5s;
+  margin-left: 23%;
+  margin-right: 5%;
+  margin-top: -15px;
+  padding: 2%;
+  width: 47%;
+  text-decoration: underline;
+  position: absolute;
+  font-size: 150%;
+  overflow: auto;
 }
 h6 {
     font-size: 300%;
@@ -305,7 +301,7 @@ h6 {
 }
 #About-int{
   text-align: center;
-  height: 33%; 
+  height: 30%; 
   padding: 4% 7%;
   padding-bottom: 10%;
 }
@@ -360,7 +356,7 @@ h6 {
 .tabset > label {
   position: relative;
   display: inline-block;
-  padding: 15px 15px 25px;
+  padding: 1% 1% 1%;
   border: 5px solid black;
   border-bottom-color: #fd9; 
   background: #fd9;
@@ -499,7 +495,7 @@ h6 {
   }
   .nav_links {
     padding: 0px 0px;
-    font-size: 75%;
+    font-size: 70%;
   }
   .links {
     padding: 0px;
@@ -508,18 +504,55 @@ h6 {
     padding-top: 40%;
     font-size: 75%;
   }
+  .no_links {
+  padding-left: 5%;
+  }
+
+  .no_links li {
+    padding: 5%;
+    text-align: center;
+  }
+  .first-int h1 {
+  font-family: 'Prompt', sans-serif;
+  font-size: 130%;
+  margin: 0 auto;
+  color: black;
+  text-align: center;
+  }
   .prof-pic {
     border-radius: 0%;
     height: 150px;
     width: 100px;
   }
-  .links {
-    padding: 5px
-  }
   .temp {
-    margin-top: 70%;
+    margin-top: 30%;
   }
+  .prof-pic2 {
+  float: none;
+  height: 200px;
+  width: 200px;
+}
   h5 {
     font-size: 100%;
     padding-top: 195%;
+  }
+  h4 {
+    font-size: 170%;
+  }
+  h6 {
+    font-size: 170%;
+  }
+  .tabset > label {
+  font-size: 100%
+  }
+  .post2 {
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-top: -15px;
+    width: 57%;
+    font-size: 100%;
+    overflow: auto;
+  }
+  #tab1 {
+    padding-bottom: 145%;
   }
