--- a/Main.css
+++ b/Main.css
@@ -35,12 +35,12 @@ body {
   font-size: 300%;
   letter-spacing: 10px;
   color: #f7fcf3;
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 .content h3 {
   font-size: 90%;
   color: #f7fcf3;
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 .fadein {
   background: black; 
@@ -73,6 +73,7 @@ body {
   border: 0;
   z-index: 100;
   border-radius: 0px;
+  border-bottom: 5px;
   margin-bottom: 0;
   height: 0px;
 }
@@ -81,7 +82,7 @@ body {
   margin: 0;
   padding: 0;
   list-style-type: none;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 145%;
   font-weight: 400;
   text-decoration: none;
@@ -121,7 +122,7 @@ body {
   list-style-type: none;
   margin: 0;
   padding-left: 35%;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 145%;
   font-weight: 400;
   text-decoration: none;
@@ -143,7 +144,7 @@ body {
   color: white;
   padding: 1%;
   font-size: 56%;
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 .first-int {
   color: white;
@@ -155,7 +156,7 @@ body {
   position: relative;
 }
 .first-int h1 {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 250%;
   margin: 0 auto;
   color: black;
@@ -172,12 +173,11 @@ body {
 }
 
 h4 {
-  font-family: 'Prompt', sans-serif;
-  border-bottom: solid;
+  font-family: 'Roboto Condensed', sans-serif;
   border-bottom-color: #1ae3de;
   width: 30%;
   margin-top: 0%;
-  padding-top: 5%;
+  padding-top: 10%;
   padding-bottom: 2%;
   font-size: 300%;
   margin: 0 auto;
@@ -197,7 +197,7 @@ h5 {
   height: 70%;
 }
 .second h5 {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   margin-top: 0%;
   padding-top: 2.5%;
   padding-bottom: 1%;
@@ -210,7 +210,7 @@ h5 {
   height: 300px;
   width: 300px;
   border: solid;
-  border-width: 10px;
+  border-width: 5px;
   border-color: #fce6d7;
   display: block;
   margin-left: auto;
@@ -228,18 +228,7 @@ h5 {
 .pics {
   list-style-type: none;
 }
-.pics li {
-  z-index: 999;
-  float: left;
-  padding-left: 5%;
-  padding-right: 5%;
-  transition: all 1s;
-}
-.pics li:hover {
-  z-index: 999;
-  padding-right: 1%;
-  padding-left: 1%;
-}
+
 
 .port-pic {
   position: relative;
@@ -252,22 +241,10 @@ h5 {
   transition: all 1s;
 }
 
-.prof-pic2 {
-  float: left;
-  position: relative;
-  z-index: 999;
-  border: solid;
-  border-width: 3px;
-  transition: all .5s;
-  height: 300px;
-  width: 300px;
-  transition: all 1s;
-}
-
 .post {
   background: rgba(80,80,80,0.7);
   color: white;
-  font-family: 'ABeeZee', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   transition: all 0.5s;
   margin-left: 2%;
   margin-right: 5%;
@@ -275,13 +252,13 @@ h5 {
   width: 65%;
   text-align: center;
   position: absolute;
-  font-size: 100%;
+  font-size: 120%;
   overflow: auto;
 }
 .post2 {
   background: rgba(255,255,255,0.7);
   color: black;
-  font-family: 'ABeeZee', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   transition: all 0.5s;
   margin-left: 23%;
   margin-right: 5%;
@@ -297,13 +274,14 @@ h6 {
     font-size: 300%;
     color: black;
     margin: 1%;
-    font-family: 'Prompt', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;;
 }
 #About-int{
   text-align: center;
   height: 30%; 
   padding: 4% 7%;
   padding-bottom: 10%;
+  background-color:  white;
 }
 #tab1{
   height: 05%; 
@@ -325,89 +303,12 @@ h6 {
 }
 
 
-/*
- CSS for the main interaction
-*/
-/*
- CSS for the main interaction
-*/
-.tabset > input[type="radio"] {
-  position: absolute;
-  left: -200vw;
 }
-
-.tabset .tab-panel {
-  display: none;
-}
-
-.tabset > input:first-child:checked ~ .tab-panels > .tab-panel:first-child,
-.tabset > input:nth-child(3):checked ~ .tab-panels > .tab-panel:nth-child(2),
-.tabset > input:nth-child(5):checked ~ .tab-panels > .tab-panel:nth-child(3),
-.tabset > input:nth-child(7):checked ~ .tab-panels > .tab-panel:nth-child(4),
-.tabset > input:nth-child(9):checked ~ .tab-panels > .tab-panel:nth-child(5),
-.tabset > input:nth-child(11):checked ~ .tab-panels > .tab-panel:nth-child(6) {
-  display: block;
-}
-
-/*
- Styling
-*/
-
-.tabset > label {
-  position: relative;
-  display: inline-block;
-  padding: 1% 1% 1%;
-  border: 5px solid black;
-  border-bottom-color: #fd9; 
-  background: #fd9;
-  border-bottom: 0;
-  cursor: pointer;
-  font-family: 'Inconsolata', sans-serif;
-  font-weight: 600;
-  font-size: 200%
-}
-
-.tabset > label::after {
-  content: "";
-  position: absolute;
-  left: 15px;
-  bottom: 10px;
-  width: 22px;
-  height: 4px;
-  font-family: 'Inconsolata', sans-serif;
-  background: white;
-}
-
-.tabset > label:hover,
-.tabset > input:focus + label {
-  color: white;
-  transition: all 1s;
-  font-family: 'Inconsolata', sans-serif;
-
-}
-
-.tabset > label:hover::after,
-.tabset > input:focus + label::after,
-.tabset > input:checked + label::after {
-  color: black;
-  background: black;
-  font-family: 'Inconsolata', sans-serif;
-  transition: all 1s;
-}
-
-.tabset > input:checked + label {
-  border-color: #f4b042;
-  border-bottom: 1px solid #f4b042;
-  margin-bottom: -1px;
-  font-family: 'Inconsolata', sans-serif;
-
-}
-
 
 .tab-panel {
   border: 5px solid #f4b042;
   border-bottom: 0px;
-  font-family: 'Inconsolata', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 
 }
 
@@ -431,10 +332,73 @@ h6 {
   height: 100%;
   width: 100%;
   background: url('img/new.png') no-repeat 50% 50%;
-
 }
 
 
+.container {
+  margin: auto;
+  position: relative;
+  width: 300px;
+  background-color: black;
+  transition: all 1s;
+
+}
+.container:hover {
+  margin: auto;
+  position: relative;
+  width: 400px;
+  background-color: black;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 300px;
+  height: 300px;
+  transition: 1s ease;
+  backface-visibility: hidden;
+  border-color: black;
+  border: 5px solid #021a40;
+}
+
+.middle {
+  border-radius: 5%;
+  transition: 1s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .image {
+  opacity: 0.3;
+  width: 400px;
+  height: 400px;
+
+}
+
+.container:hover .middle {
+  opacity: .7;
+  background:rgba(0, 0, 0, 0.75);
+}
+.middle:hover .text{
+  cursor: pointer;
+  background-color: white;
+  color:  black;
+}
+
+.text {
+  border-radius: 5%;
+  transition: 1s ease;
+  border-color: gray;
+  background-color: black;
+  color: white;
+  font-size: 20px;
+  padding: 16px 32px;
+}
 
 /*--- Media Queries --*/
 @media screen and (max-width: 900px){
@@ -545,12 +509,6 @@ h6 {
   h6 {
     font-size: 170%;
   }
-  .tabset > label {
-  font-size: 100%
-  }
-  .tabset > label::after {
-  width: 0px;
-  }
   .post2 {
     margin-left: 0%;
     margin-right: 0%;
@@ -558,7 +516,4 @@ h6 {
     width: 57%;
     font-size: 100%;
     overflow: auto;
-  }
-  #tab1 {
-    padding-bottom: 145%;
   }
